# stocks-bot

./: .gitignore  Makefile  README.md  app.py  pyproject.toml  requirements.txt  samples.ipynb  utils.py
