[tool.poetry]
name = "stocks-bot"
version = "0.1.0"
description = "Telegram Bot to track stocks data"
authors = ["Yoav Navon <yanavon@uc.cl>"]

[tool.poetry.dependencies]
python = "^3.9"
python-telegram-bot = "^13.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
